code block dark mode fix

--- a/_sass/minima-reboot/_layout.scss
+++ b/_sass/minima-reboot/_layout.scss
@@ -474,6 +474,7 @@ main {
   }
 
   .highlight pre {
+    color: #f9f9f9;
     border: 1px solid $layout-color-border-dark;
     border-radius: .25rem;
     background-color: $layout-color-syntax-highlighting-background-dark;
