--- a/_sass/minima-reboot/_syntax-highlighting.scss
+++ b/_sass/minima-reboot/_syntax-highlighting.scss
@@ -59,3 +59,9 @@
   .vi    { color: #008080 } // Name.Variable.Instance
   .il    { color: #099 } // Literal.Number.Integer.Long
 }
+
+@media (prefers-color-scheme: dark) {
+  .highlight {
+    .nt { color: #0000fd } // Name.Tag
+  }
+}
